# nethical

./: .env.example  .gitignore  .pre-commit-config.yaml  .trivyignore  API_V1_README.md  ARCHITECTURE.md  ASYNC_FACTORY_IMPLEMENTATION_SUMMARY.md  AUDIT.md  BACKEND_API_SUMMARY.md  BRANDING_ASSETS_NOTE.md  CHANGELOG.md  CONTRIBUTING.md  DEBUGGING_CHECKLIST_RESULTS.md  DEBUGGING_REPORT.md  DEBUG_PLAN.md  DOCUMENTATION_REORGANIZATION_SUMMARY.md  DOCUMENTATION_STATUS.md  Dockerfile  ETHICAL_AI_PROTOCOL.md  ETHICAL_TAXONOMY_TRAINING.md  F6_IMPLEMENTATION_SUMMARY.md  FAIRNESS_SAMPLING_TRAINING.md  FINAL_REPORT.md  FINAL_SUMMARY.md  FUNDAMENTAL_LAWS.md  FUNDAMENTAL_LAWS_REDIRECT.md  GOVERNANCE_TRAINING_IMPLEMENTATION.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_QUARANTINE_TRAINING.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_ETHICAL_TAXONOMY.md  LICENSE  MONITORING_IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  OPTIMIZATION_INTEGRATION_SUMMARY.md  PERFORMANCE_OPTIMIZER_INTEGRATION.md  PHASE1_RBAC_SUMMARY.md  PHASE1_SUMMARY.md  PHASE3_GUIDE.md  (+59 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
assets/: .gitattributes  README.md
audit_logs/: chunk_20251124_140021_681832.json  chunk_20251124_140021_682172.json  chunk_20251124_140021_682291.json  chunk_20251124_140021_682391.json  chunk_20251124_140021_682489.json  chunk_20251124_140021_682593.json  chunk_20251124_140021_682681.json  chunk_20251124_140021_682767.json  chunk_20251124_140021_682851.json  chunk_20251124_140021_682935.json
benchmark_results/: benchmark_20251218_062006.json  benchmark_20251218_062018.json
benchmarks/: __init__.py  __main__.py  compare.py  jit_comparison.py  runner.py
cli/: policy_diff  policy_simulator  review_queue
config/: README.md  af-south-1.env  ap-east-1.env  ap-northeast-1.env  ap-northeast-2.env  ap-south-1.env  ap-southeast-1.env  ap-southeast-2.env  ca-central-1.env  correlation_rules.yaml  embedding_config.yaml  eu-central-1.env  eu-north-1.env  eu-south-1.env  eu-west-1.env  eu-west-2.env  example_config.ini  example_config.yaml  fundamental_laws.yaml  kill_switch.yaml  me-central-1.env  me-south-1.env  monitoring.yaml  sa-east-1.env  storage.yaml  us-east-1.env  us-gov-west-1.env  us-west-1.env  us-west-2.env  validation_config.yaml
dashboards/: __init__.py  appeals_metrics.py  dashboard.py  detection_intelligence.json  fairness_metrics.py  governance.json  latency_slo.json  policy_lineage_tracker.py  security.json
datasets/: datasets  datasets.md  datasets1
deploy/: DEPLOYMENT_GUIDE.md  Dockerfile.build  release.sh  verify-repro.sh
docs/: ADAPTIVE_GUARDIAN.md  API_VERSIONING.md  ARCHITECTURE.md  ASYNC_FACTORY_PATTERN.md  BENCHMARK_PLAN.md  Benchmark_plan.md  CI_VALIDATION_FIX.md  CLOUD_INTEGRATIONS_GUIDE.md  CORRUPTION_DETECTION.md  DEPLOYMENT.md  ETHICS_VALIDATION_FRAMEWORK.md  F3_PRIVACY_GUIDE.md  GLOBAL_DEPLOYMENT_GUIDE.md  INDEX.md  INTEROPERABILITY_COMPLIANCE.md  LLM_INTEGRATION_GUIDE.md  LLM_PROVIDERS_GUIDE.md  MARKETPLACE_REGISTRATION_GUIDE.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PHASE1_SECURITY.md  PRODUCTION_READINESS_CHECKLIST.md  QUICKSTART.md  README.md  SECURITY_HARDENING.md  SECURITY_HARDENING_GUIDE.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SEMANTIC_MONITORING_GUIDE.md  SLA_LATENCY.md  SUPPLY_CHAIN_SECURITY_GUIDE.md  Security_hardening_guide.md  Setup_Secrets.md  TRAINING_GUIDE.md  VALIDATION.md  VECTOR_STORE_INTEGRATION_GUIDE.md  VERIFICATION_STATUS.md  detectors.md  index.md  kaggle.json  mlops-architecture.md  model-deployment-guide.md  (+7 more)
example_drift_reports/: drift_20251007_105703.json
examples/: README.md  README_MCP.md  adaptive_guardian_integration.py  async_factory_pattern_example.py  basic_usage.py  benchmark_feedback_example.py  cohere_demo.py  correlation_model_demo.py  crewai_demo.py  custom_detectors.py  databricks_demo.py  demo_governance_training.py  demo_train_with_quarantine.py  enhanced_embeddings_example.py  explainability_demo.py  f3_privacy_demo.py  fairness_sampling_training_example.py  full_stack_demo.py  langchain_integration_demo.py  langfuse_demo.py  llamaindex_demo.py  mcp_client_example.py  phase1_integration_example.py  phase4_demo.py  phase567_demo.py  phase89_demo.py  security_demo.py  security_rbac_demo.py  train_anomaly_detector.py  train_with_drift_tracking.py  train_with_ethical_taxonomy.py  train_with_optimization.py  train_with_performance_optimization.py  train_with_phase3.py  train_with_phase567.py  train_with_phase89.py  train_with_real_data_demo.py  unified_governance_demo.py  vector_language_example.py  vector_store_demo.py  (+1 more)
governance/: fairness_recalibration_report.md
grafana/: README.md
mlops/: model_registry.py  training_pipeline.py
models/: README.md
nethical/: __init__.py  api.py  cli.py  mcp_server.py  performanceprofiling.py  quotas.py
nethical-edge/: README.md
portal/: api.py  audit_portal_spec.md
probes/: __init__.py  anomaly_detector.py  base_probe.py  governance_probes.py  invariant_probes.py  performance_probes.py
roadmaps/: ROADMAP_9+.md  Roadmap_Maturity.md  nethicalplan.md  roadmap.md
scripts/: README.md  add_image_from_url.py  baseline_orchestrator.py  check-vuln-sla.py  check_dependency_confusion.py  ci_train_wrapper.py  compare_models.py  compliance_validator.py  create_branding_assets.py  deploy_medium_term.sh  deploy_model.py  download_branding_assets.sh  generate_hashed_requirements.py  kpi_monitoring.py  monitor_models.py  nethical-pdk.py  regenerate_hashes.sh  run_advanced_validation.sh  shadow_replay.py  storage_migration.py  supply_chain_dashboard.py  test-network-isolation.sh  test_model.py  train_commandos.sh  train_model.py  update_environment.sh  validate_datasets.py  validate_medium_term.sh  verify-security-controls.sh
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
security/: red_team_playbook.md
server/: audit.py  mcp_server.py  models.py
taxonomies/: healthcare_taxonomy.json
test_unified_data3/: escalations.db
test_unified_data5/: optimization.db
tests/: TEST_STATUS.md  __init__.py  advancedtests.py  benchmark_latency.py  (+101 more)
(+1157 files in other folders)
