# Relevant excerpt with added cachetools + httpx test dependency

[project]
name = "nethical"
version = "2.3.0"
description = "Safety, ethics and more"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "pydantic>=2.6.1",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "cachetools>=5.0.0",
    "sentence-transformers>=2.2.0",
    "click>=8.0.0",
    "websockets>=10.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

# Hardware accelerator support
cuda = [
    "torch>=2.0.0",
]

tpu = [
    "torch>=2.0.0",
    "torch_xla>=2.0.0",
]

trainium = [
    "torch>=2.0.0",
    "torch-neuronx>=2.0.0",
]

# All accelerators
accelerators = [
    "torch>=2.0.0",
]

# Post-quantum cryptography (when libraries mature)
pqc = [
    "cryptography>=44.0.0",
]

[project.scripts]
nethical = "nethical.cli:cli"

[project.urls]
Homepage = "https://github.com/V1B3hR/nethical"
[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]
py-modules = ["nethical_cli"]

[tool.setuptools.packages.find]
include = ["nethical*"]
exclude = ["tests*", "examples*"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",  # whitespace before ':', compatible with Black
    "W503",  # line break before binary operator, compatible with Black
]
exclude = [".git", "__pycache__", ".venv", "venv", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
